# prl_ur10e_robot_configuration

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: controller_setup.yaml  standard_setup.yaml
config/kinematics/: default_kinematics.yaml
config/limits/: joint_kinematics.yaml
script/: setup_env.bash
urdf/: empty.urdf.xacro  no_gripper.urdf.xacro
